--- a/trie/Cargo.toml
+++ b/trie/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ethereum-trie"
-version = "0.3.8"
+name = "ethereum-trie-test"
+version = "0.3.9"
 license = "Apache-2.0"
 authors = ["Wei Tang <hi@that.world>"]
 description = "Lightweight Ethereum world state storage."
@@ -8,7 +8,7 @@ repository = "https://source.that.world/source/ethereum-rs"
 keywords = ["ethereum"]
 
 [lib]
-name = "trie"
+name = "trie_test"
 
 [dependencies]
 ethereum-bigint = { version = "0.2", path = "../bigint" }
