--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ hex-literal = "0.3"
 default = ["std"]
 with-codec = ["codec", "ethereum-types/codec"]
 with-serde = ["serde", "ethereum-types/serialize"]
+#TODO scale-info feature
 std = [
 	"ethereum-types/std",
 	"rlp/std",
@@ -50,3 +51,9 @@ std = [
 
 [workspace]
 members = []
+
+# Use scale-info compatible crate that I hacked together.
+[patch.crates-io]
+ethereum-types = { git = "https://github.com/purestake/parity-common", branch = "joshy-scale-info-ethereum"}
+rlp = { git = "https://github.com/purestake/parity-common", branch = "joshy-scale-info-ethereum"}
+rlp-derive = { git = "https://github.com/purestake/parity-common", branch = "joshy-scale-info-ethereum"}
