--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ sha3 = { version = "0.9", default-features = false }
 triehash = { version = "0.8", default-features = false }
 hash256-std-hasher = { version = "0.15", default-features = false }
 hash-db = { version = "0.15", default-features = false }
-scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
+scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true}
 
 [dev-dependencies]
 rand = "0.8"
@@ -33,9 +33,8 @@ hex-literal = "0.3"
 
 [features]
 default = ["std"]
-with-codec = ["codec", "ethereum-types/codec"]
+with-codec = ["codec", "scale-info", "ethereum-types/codec"]
 with-serde = ["serde", "ethereum-types/serialize"]
-#TODO scale-info feature
 std = [
 	"ethereum-types/std",
 	"rlp/std",
