--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ edition = "2018"
 [dependencies]
 bytes = { version = "1.0", default-features = false }
 ethereum-types = { version = "0.14", default-features = false, features = ["rlp", "codec"] }
-hash-db = { version = "0.15", default-features = false }
+hash-db = { version = "0.16", default-features = false }
 hash256-std-hasher = { version = "0.15", default-features = false }
 rlp = { version = "0.5.2", default-features = false, features = ["derive"] }
 sha3 = { version = "0.10", default-features = false }
-triehash = { version = "0.8", default-features = false }
+trie-root = { version = "0.18", default-features = false }
 
 codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive"], optional = true }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
@@ -24,6 +24,8 @@ serde = { version = "1.0", default-features = false, features = ["derive"], opti
 [dev-dependencies]
 hex-literal = "0.3"
 rand = "0.8"
+hash-db15 = { package = "hash-db", version = "0.15.2" }
+triehash = "0.8.4"
 
 [features]
 default = ["std"]
@@ -39,5 +41,5 @@ std = [
     "scale-info/std",
     "serde/std",
     "sha3/std",
-    "triehash/std",
+    "trie-root/std",
 ]
